[package]
name = "pomidor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
regex = "1.9.3"
figlet-rs = "0.1.5"
crossterm = "0.26"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
